# 309Project

./: .dockerignore  Dockerfile.jupyter  Dockerfile.runner  README.md  eda.ipynb  pyproject.toml  requirements.txt  run.sh  setup.py
309ml-pipeline/src/309ml_pipeline/: __init__.py  __main__.py
conf/base/: catalog.yml  parameters.yml  spark.yml
data_1/02_intermediate/: cleaned_geolocation.csv  cleaned_products.csv
data_1/03_primary/combined_processed_data.csv/: .part-00000-e7e61ed3-bba5-4e58-8109-eb75c96a5436-c000.csv.crc  .part-00001-e7e61ed3-bba5-4e58-8109-eb75c96a5436-c000.csv.crc  .part-00002-e7e61ed3-bba5-4e58-8109-eb75c96a5436-c000.csv.crc  .part-00003-e7e61ed3-bba5-4e58-8109-eb75c96a5436-c000.csv.crc  .part-00004-e7e61ed3-bba5-4e58-8109-eb75c96a5436-c000.csv.crc  part-00000-e7e61ed3-bba5-4e58-8109-eb75c96a5436-c000.csv  part-00001-e7e61ed3-bba5-4e58-8109-eb75c96a5436-c000.csv  part-00002-e7e61ed3-bba5-4e58-8109-eb75c96a5436-c000.csv  part-00003-e7e61ed3-bba5-4e58-8109-eb75c96a5436-c000.csv  part-00004-e7e61ed3-bba5-4e58-8109-eb75c96a5436-c000.csv
data_1/03_primary/customer_order_counts.csv/: .part-00000-73c23f75-5049-4e09-8db2-fac76af172be-c000.csv.crc  .part-00001-73c23f75-5049-4e09-8db2-fac76af172be-c000.csv.crc  .part-00002-73c23f75-5049-4e09-8db2-fac76af172be-c000.csv.crc  .part-00003-73c23f75-5049-4e09-8db2-fac76af172be-c000.csv.crc  part-00000-73c23f75-5049-4e09-8db2-fac76af172be-c000.csv  part-00001-73c23f75-5049-4e09-8db2-fac76af172be-c000.csv  part-00002-73c23f75-5049-4e09-8db2-fac76af172be-c000.csv  part-00003-73c23f75-5049-4e09-8db2-fac76af172be-c000.csv
data_1/03_primary/df_full.csv/: .part-00000-0e2d976d-bac3-4c90-9ee6-b0cc5620c00d-c000.csv.crc  .part-00001-0e2d976d-bac3-4c90-9ee6-b0cc5620c00d-c000.csv.crc  .part-00002-0e2d976d-bac3-4c90-9ee6-b0cc5620c00d-c000.csv.crc  (+7 more)
data_1/04_features/: target_data.csv
raw-functions/: delivery_time.py  installment_flagging.py  product_category.py  repeat_buyers.py
raw_functions/: delivery_time.py  distance.py  final_dataset.py  installment_flagging.py  product_category.py  repeat_buyers.py
src/: logger.py  setting.py  spark_hooks.py
src/309ml_pipeline/: settings.py
src/mlpipeline/: __main__.py  hooks.py  pipeline_registry.py  settings.py
src/pipelines/: nodes.py
(+36 files in other folders)
