[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "309ml_pipeline"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=0.19.12",]

[project.scripts]
309ml-pipeline = "309ml_pipeline.__main__:main"

[tool.kedro]
package_name = "309ml_pipeline"
project_name = "309ML_Pipeline"
kedro_init_version = "0.19.12"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "309ml_pipeline.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
