[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "309ml_pipeline"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=0.19.12",]

[project.scripts]
mlpipeline = "mlpipeline.__main__:main"

[tool.kedro]
package_name = "mlpipeline"
project_name = "309ML_Pipeline"
kedro_init_version = "0.19.12"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "mlpipeline.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
